--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>calculatorDevOps</artifactId>
+    <artifactId>calculator_devops</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <goalsartifactId>maven-assembly-plugin</goalsartifactId>
                 <executions>
                     <execution>
                         <phase>package</phase>
